# unai-scout

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  index.html  package-lock.json  package.json  pnpm-lock.yaml  prefect.yaml  pyproject.toml
public/: background.js  manifest.json
src/: App.vue  main.py
src/components/: TabAudio.vue  TabImage.vue  TabVideo.vue  Tooltip.vue
src/utils/: icons.ts  operations.ts  tooltip.ts
