[project]
name = "unai-scout"
version = "0.1.0"
description = "Data Scouting Service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "instaloader>=4.14.1",
    "prefect>=3.1.14",
]

[project.urls]
Source = "https://github.com/shba007/unai-scout.git"

[dependency-groups]
dev = [
    "ruff>=0.8.5",
    "taskipy>=1.14.1",
]

[tool.taskipy.tasks]
dev = "python src/main.py"
lint = "ruff check --fix"
format = "ruff format"
preview = "prefect server start"
